tests/src/frontend/typechecking/invalid/frozen_tparam_expr_dot_2.sk
mutable class Foo(f: () -> void)
fun no<T: mutable Foo>(x: T): void {
  freeze(x).f()
}
